Version 1.0.8
	Changed the Keybind setting to allow binding the left and right mousebutton.
	Canceling and deleting keybinds is now done by buttons appearing when binding.
	Deprecated the PartMagnet, BoltMagnet does the exact same thing with no bolts assigned.
	Added "Sources.txt" file in ModUpdater folder - enables mods that don't natively support Mod Loader Pro to have auto updates

Version 1.0.7
	Bolt components can now operate independently from a BoltMagnet component.
	Added OnScrew event to Bolt component, executed each screw, as well as events OnMaxTightness and OnMinTightness executed when the bolt reach max and min tightness respectively.
	Fixed SettingSlider value text not working properly when the value went into negatives.
	Adjusted UI text and shadows.
	Fixed NexusMods login failing, if user didn't have profile picture set.
	Changed how NexusMods login is being handled, if CoolUpdater couldn't start a web browser
	Removed resources from template, instead adding a guide on the website on how to add resources to your project.
	Addressed an issue related with objects using PartMagnet being not detacheable, if the object has been disabled
	Fixed music not playing after quitting from game to the main menu (issue #5)
	CoolUpdater: Added info page, if CoolUpdater is open by the user
	Uninstaller: Added support for launching the Uninstaller via "Add or remove programs"

Version 1.0.6
	Fixed UI scaling on ultrawide resolutions.
	Fixed Nexus out of range exception.
	Fixed user avatar when using Gravatar.

Version 1.0.5
	CoolUpdater: Added "Start Game (No Steam)" button.
	Fixed keybinds with None as a modifier.

Version 1.0.4
	Mod Auto Updater should now prioritze archives with .pro.zip extension as intended.
	CoolUpdater: Fixed "Start Game" button not starting the game with Mod Loader Pro.

Version 1.0.3
	Added "ExecuteCommand" method.
	Fixed update status permanently staying on the main menu, if no mods are installed.
	Fixed compatibility with Cassette mod.
