@@ -1,13 +1,0 @@
-// This file contains update sources of mods that don't natively support Mod Loader Pro auto updates.
-// Remember that only NexusMods and GitHub links are supported by Mod Loader Pro!
-// You can add your own sources by adding new line to this text file and following the example:
-// ModID https://nexusmods.com/mysummercar/mods/xxxxxx
-// or
-// ModID https://github.com/user/repository
-
-// Empty lines and lines starting with double-slash will be skipped
-
-BetterFPSCounter https://www.nexusmods.com/mysummercar/mods/378
-DeveloperToolsetII https://www.nexusmods.com/mysummercar/mods/345
-FifthGear https://www.nexusmods.com/mysummercar/mods/221
-MOP https://github.com/Athlon007/MOP
