@@ -61,22 +61,12 @@ namespace MSCLoader.Properties {
         }
         
         /// <summary>
-        ///   Looks up a localized string similar to Version 1.0.6
-        ///	Fixed UI scaling on ultrawide resolutions.
-        ///	Fixed Nexus out of range exception.
-        ///	Fixed user avatar when using Gravatar.
-        ///
-        ///Version 1.0.5
-        ///	CoolUpdater: Added &quot;Start Game (No Steam)&quot; button.
-        ///	Fixed keybinds with None as a modifier.
-        ///
-        ///Version 1.0.4
-        ///	Mod Auto Updater should now prioritze archives with .pro.zip extension as intended.
-        ///	CoolUpdater: Fixed &quot;Start Game&quot; button not starting the game with Mod Loader Pro.
-        ///
-        ///Version 1.0.3
-        ///	Added &quot;ExecuteCommand&quot; method.
-        ///	Fixed update status per [rest of string was truncated]&quot;;.
+        ///   Looks up a localized string similar to Version 1.0.8
+        ///	Changed the Keybind setting to allow binding the left and right mousebutton.
+        ///	Canceling and deleting keybinds is now done by buttons appearing when binding.
+        ///	Deprecated the PartMagnet, BoltMagnet does the exact same thing with no bolts assigned.
+        ///	Added &quot;Sources.txt&quot; file in ModUpdater folder - enables mods that don&apos;t natively support Mod Loader Pro to have auto updates
+        ///	Mods not natively supported by Mod Loader Pro (and have been added into Sources.txt) will have their info downloaded fr [rest of string was truncated]&quot;;.
         /// </summary>
         internal static string Changelog {
             get {
@@ -91,6 +81,23 @@ namespace MSCLoader.Properties {
             get {
                 object obj = ResourceManager.GetObject("mscloadercanvas", resourceCulture);
                 return ((byte[])(obj));
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to // This file contains sources of mod updates for mods that are not made for Mod Loader Pro.
+        ///// If you want to add your own sources, DO NOT DO THAT HERE! This file will be overwritten on each update!
+        ///// If you want to add custom sources, do that in UserSources.txt!
+        ///
+        ///BetterFPSCounter https://www.nexusmods.com/mysummercar/mods/378
+        ///DeveloperToolsetII https://www.nexusmods.com/mysummercar/mods/345
+        ///FifthGear https://www.nexusmods.com/mysummercar/mods/221
+        ///MOP https://github.com/Athlon007/MOP
+        ///CDPlayer https [rest of string was truncated]&quot;;.
+        /// </summary>
+        internal static string Sources {
+            get {
+                return ResourceManager.GetString("Sources", resourceCulture);
             }
         }
     }
