@@ -124,4 +124,7 @@
   <data name="mscloadercanvas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mscloadercanvas;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Sources" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sources.txt;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
